--- a/LandPage/style.css
+++ b/LandPage/style.css
@@ -5,7 +5,7 @@
 font-family: 'Pacifico', cursive;
 font-family: 'Satisfy', cursive; */
 
-#71c55b
+/* #71c55b
 #92e27a
 #ff735a
 #ff8c78
@@ -13,4 +13,4 @@ font-family: 'Satisfy', cursive; */
 #DAA520
 #D2AC47
 #AE8625
-#f8da45
+#f8da45 */
