--- a/LandPage/style.css
+++ b/LandPage/style.css
@@ -5,7 +5,8 @@
 font-family: 'Pacifico', cursive;
 font-family: 'Satisfy', cursive; */
 
-/* #71c55b
+/*paleta de cores:
+#71c55b
 #92e27a
 #ff735a
 #ff8c78
@@ -13,4 +14,15 @@ font-family: 'Satisfy', cursive; */
 #DAA520
 #D2AC47
 #AE8625
-#f8da45 */
+#f8da45 
+#f2f5f7
+#ffff
+#b0b1b3*/
+
+/* imagens:
+https://img.irroba.com.br/filters:fill(fff):quality(80)/tertulia/catalog/papelaria/cartaz/pequeno-principe/peq/tertulia-kraft-pequeno-principe-artsanato.jpg
+https://media.semprefamilia.com.br/semprefamilia/2018/04/bigstock-little-prince-and-the-fox-127327796-e533f25c.png
+https://iepp.com.br/wp-content/uploads/2018/04/imagem-face-o-pequeno-principe-750x410-1-750x375.jpg
+https://images.tcdn.com.br/img/img_prod/850317/pequeno_principe_o_2329_1_6917d4e12c4129c862834e02ec9dce37.jpg
+https://br.web.img3.acsta.net/pictures/15/06/25/16/20/518080.jpg
+https://rollingstone.uol.com.br/media/_versions/o_pequeno_principe_filme_de_mark_osborne_foto_divulgacao_widelg.jpg */
