--- a/LandPage/style.css
+++ b/LandPage/style.css
@@ -1,24 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Pacifico&family=Satisfy&display=swap');
 
-
-/* font-family: 'Dancing Script', cursive;
-font-family: 'Pacifico', cursive;
-font-family: 'Satisfy', cursive; */
-
-/*paleta de cores:
-#71c55b
-#92e27a
-#ff735a
-#ff8c78
-#F44E3F
-#DAA520
-#D2AC47
-#AE8625
-#f8da45 
-#f2f5f7
-#ffff
-#b0b1b3*/
-
 /* imagens:
 https://img.irroba.com.br/filters:fill(fff):quality(80)/tertulia/catalog/papelaria/cartaz/pequeno-principe/peq/tertulia-kraft-pequeno-principe-artsanato.jpg
 https://media.semprefamilia.com.br/semprefamilia/2018/04/bigstock-little-prince-and-the-fox-127327796-e533f25c.png
@@ -26,3 +7,119 @@ https://iepp.com.br/wp-content/uploads/2018/04/imagem-face-o-pequeno-principe-75
 https://images.tcdn.com.br/img/img_prod/850317/pequeno_principe_o_2329_1_6917d4e12c4129c862834e02ec9dce37.jpg
 https://br.web.img3.acsta.net/pictures/15/06/25/16/20/518080.jpg
 https://rollingstone.uol.com.br/media/_versions/o_pequeno_principe_filme_de_mark_osborne_foto_divulgacao_widelg.jpg */
+
+
+:root{
+    --primary-color: #92e27a;
+    --second-color: #D2AC47;
+    --third-color: #f2f5f7;
+    --fourth-color: #b0b1b3;
+    --gap: 3rem;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Dancing Script', cursive;
+}
+
+html{
+    font-size: 62.5%;
+}
+
+body{
+    font-size: 2.2rem;
+}
+
+h1 h2 h3 h4 h5 h6 {
+    font-family: 'Pacifico', cursive;
+}
+
+h1{
+    text-transform: uppercase;
+    font-size: 5rem;
+}
+
+h2{
+    text-transform: uppercase;
+    font-size: 4.5rem;
+}
+
+h3{
+    text-transform: capitalize;
+    font-size: 4rem;
+}
+
+h4{
+    text-transform: capitalize;
+    font-size: 3.5rem;
+}
+
+h5{
+    text-transform: capitalize;
+    font-size: 3rem;
+}
+
+h6{
+    text-transform: capitalize;
+    font-size: 2.5rem;
+}
+
+a{
+    text-decoration: none;
+
+}
+
+p{
+    margin: var(--gap);
+    text-align: justify;
+}
+
+/* primeira sessao: */
+
+.bg-principal{
+    background-color: var(--primary-color);
+}
+
+.sessao{
+    min-height: 100vh;  /*vh e vw = view height e width (altura vista)*/
+    display: flex;
+    justify-content: center;
+}
+
+.conteiner-principal{
+    max-width: 100rem;
+    margin: 0, auto;
+    padding: 10rem var(--gap);
+    display: flex;
+    flex-direction: row;
+    
+}
+
+.conteudo-principal{
+    text-align: center;
+}
+
+img {
+    height: 40rem;
+    width: 40rem;
+}
+
+/* sessao secundaria */
+
+.bg-secundario{
+    background-color: var(--second-color);
+}
+
+.conteiner-principal2{
+    max-width: 100rem;
+    margin: 0, auto;
+    padding: 10rem var(--gap);
+    display: flex;
+    flex-direction: column;
+}
+
+.conteiner-principal2 h2{
+    padding: 0 var(--gap);
+}
