--- a/LandPage/style.css
+++ b/LandPage/style.css
@@ -2,11 +2,13 @@
 
 /* imagens:
 https://img.irroba.com.br/filters:fill(fff):quality(80)/tertulia/catalog/papelaria/cartaz/pequeno-principe/peq/tertulia-kraft-pequeno-principe-artsanato.jpg
-https://media.semprefamilia.com.br/semprefamilia/2018/04/bigstock-little-prince-and-the-fox-127327796-e533f25c.png
 https://iepp.com.br/wp-content/uploads/2018/04/imagem-face-o-pequeno-principe-750x410-1-750x375.jpg
 https://images.tcdn.com.br/img/img_prod/850317/pequeno_principe_o_2329_1_6917d4e12c4129c862834e02ec9dce37.jpg
 https://br.web.img3.acsta.net/pictures/15/06/25/16/20/518080.jpg
-https://rollingstone.uol.com.br/media/_versions/o_pequeno_principe_filme_de_mark_osborne_foto_divulgacao_widelg.jpg */
+https://i.pinimg.com/originals/94/46/49/94464902eb557a30986497d7a2b37603.jpg
+https://i.pinimg.com/originals/ef/17/4c/ef174c49917318a7c1c0bc8a5862dcf7.jpg
+https://i.pinimg.com/736x/8c/2d/b2/8c2db2f5b74e285cd0624e54c85fe92b.jpg
+*/
 
 
 :root{
