aula formulario e rodape

--- a/LandPage/css/grid_fotos.css
+++ b/LandPage/css/grid_fotos.css
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: column;
     margin: 0, auto;
-    min-width: 100rem;
+    max-width: 100rem;
     justify-content: center;
+    overflow-x: hidden;
 }
 
 .grid-fotos-titulo {
@@ -23,10 +24,23 @@
     gap: 3rem;
 }
 
-.conteiner-img {}
+.conteiner-img {
+    width: 100%;
+    max-width: 20rem;
+    max-height: 20rem;
+    overflow: hidden;
 
-.conteiner-img img {}
+}
 
-.conteiner-img .img-info {}
+.conteiner-img img {
+    transition: all 300ms ease-in-out;
+}
 
-.conteiner-img .img-info p {}
+.conteiner-img img:hover {
+    transform: translate(-3%, 3%) scale(1.2) rotate(5deg);
+}
+
+/* .conteiner-img .img-info {
+}
+
+.conteiner-img .img-info p {} */
