01082023 volta as aulas

--- a/LandPage/css/formulario.css
+++ b/LandPage/css/formulario.css
@@ -20,6 +20,63 @@
 
 .formulario-conteudo fieldset{
     display: grid;
+    grid-template-areas: 
+    'header header'
+    'nome sobrenome'
+    'email mensagem'
+    'botao botao';
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
 }
+
+.formulario-conteudo fieldset .cabecalho{
+    font-style: italic;
+    font-size: 1.8rem;
+    margin-left: 3rem;
+}
+
+.formulario-elementos{
+    padding: 1rem;
+}
+
+.formulario-elementos label{
+    margin-left: 1rem;
+    margin-bottom: 2rem;
+}
+
+.formulario-elementos input,
+.formulario-elementos textarea{
+    border: none;
+    padding: 1.5rem, 2rem;
+    font-size: 2rem;
+    outline: none;
+}
+
+.formulario-elementos input:focus,
+.formulario-elementos textarea:focus{
+    box-shadow: 0 0 1rem 0.2rem yellow;
+}
+
+.formulario-elementos input::placeholder,
+.formulario-elementos textarea::placeholder{
+    padding-left: 1rem;
+}
+
+.formulario-elementos button{
+    border: 0.5rem solid #b0b1b3;
+    background-color: rgb(247, 247, 46);
+    color: #b0b1b3;
+    font-size: 2rem;
+    padding: 0.5rem;
+    border-radius: 1rem;
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
+}
+
+.formulario-elementos button:hover{
+    border: 0.5rem solid rgb(0, 0, 0);
+    background-color:#b0b1b3;
+    color: black;
+    box-shadow: 0 0 1rem 0.2rem  #3a2b01; 
+}
+
