reajustamos o que estava errado no formulario

--- a/LandPage/css/formulario.css
+++ b/LandPage/css/formulario.css
@@ -29,6 +29,34 @@
     grid-template-rows: 1fr;
 }
 
+.item1 {
+    grid-area: header;
+}
+.item2{
+    grid-area: nome;
+}
+.item3{
+    grid-area: sobrenome;
+}
+.item4{
+    grid-area: email;
+}
+.item5{
+    grid-area: mensagem;
+}
+.item6{
+    grid-area: botao;
+}
+
+.textarea{
+    resize: none;
+}
+
+.sobrenome{
+    width: 251.83px;
+}
+
+
 .formulario-conteudo fieldset .cabecalho{
     font-style: italic;
     font-size: 1.8rem;
