dever da aula 12/09

--- a/Aula_16/style.css
+++ b/Aula_16/style.css
@@ -47,3 +47,17 @@ h1 {
     justify-content: center;
     align-items: center;
 }
+
+.text{
+    font-weight: bold;
+    font-size: 6rem;
+    line-height: 1;
+    margin: 1rem 2rem;
+}
+
+div {
+    text-align: center;
+}
+div span {
+    font-size: 2rem;
+}
