--- a/Aula_17/style.css
+++ b/Aula_17/style.css
@@ -42,7 +42,7 @@ ul {
 }
 
 ul li {
-    font-size: 14px;
+    font-size: 20px;
     margin: 10px 0; /* vertical horizontal*/
 }
 
@@ -70,3 +70,20 @@ button:focus{
     background-color: gray;
 }
 
+.reset_btn{
+    cursor: pointer;
+    width: 100%;
+    color: white;
+    background-color: rgba(165, 42, 42, 0.822);
+    border: none;
+    font-size: 20px;
+    height: 20%;
+    border-radius: 0 0 10px 10px;
+}
+
+.reset_h1{
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
