--- a/Aula_18/style.css
+++ b/Aula_18/style.css
@@ -1,11 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis&family=Mooli&display=swap');
+
 * {
     margin: 0;
     padding: 0;
-    /* font-family:  */
+    box-sizing: border-box;
+    font-family: 'Dosis', sans-serif;
+    font-family: 'Mooli', sans-serif;
 }
 
 body{
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+    width: 100vw;
+    background-image: url('img/boletim.jpg');
+    background-position: center center;
+    background-size: cover;
+}
+
+h1{
+    padding: 20px;
+    text-align: center;
+    font-size: 5rem;
+}
+
+.conteiner_inform{
+    font-size: 2rem;
+}
+
+p {
+    padding: 10px;
 }
