--- a/Aula_20/style.css
+++ b/Aula_20/style.css
@@ -64,8 +64,8 @@ body {
 }
 
 .gerar-senha{
-    background-color: rgba(78, 5, 5, 0.719);
-    color: white;
+    background-color: white;
+    color: black;
     border: none;
     cursor: pointer;
     width: 100%;
@@ -75,3 +75,5 @@ body {
     margin-top: 20px;
     padding: 10px;
 }
+
+
