--- a/Aula_21/style.css
+++ b/Aula_21/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 90%);
+    background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 90%); /* para deixar a tela com varias cores! */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,14 +17,58 @@ body {
 }
 
 h1{
-    opacity: 0.5;
+    opacity: 0.5; /* textura do texto, transparente ou nao mais ou menos isso */
     font-size: 60px;
     text-align: center;
-    color: rgb(167, 54, 167);
+    color: rgb(73, 29, 73);
 }
 
 form{
-    box-shadow: 0 5px 10px rgb(167, 54, 167);
+    box-shadow: 0 5px 10px rgba(77, 29, 77, 0.877); /* sompra em volta do "caixa" */
     max-width: 100%;
     width: 400px;
+}
+
+.entrada {
+    border: none;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    padding: 2px 10px;
+    color: rgb(255, 255, 255);
+}
+
+.entrada::placeholder {
+    color: rgba(187, 187, 187, 0.712);
+}
+
+.entrada:focus{
+    border: none;
+    outline: 0; /* sem linha ao clicar no input */
+}
+
+.tarefas {
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    height: 100%;
+    padding: 2px 10px; /* pode colocar altura e comprimento */
+    color: rgb(255, 255, 255);
+    list-style: none;/* o estilo da lista*/
+    cursor: pointer; /* mudar o ponteiro do mouse */
+}
+
+.tarefas li {
+    font-size: 15px;
+}
+
+.tarefas li.completada{
+    color: rgba(255, 255, 255, 0.61);
+    text-decoration: line-through;  
+}
+
+small {
+    margin-top: 30px;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.637);
+    font-style: italic; /* estilo do texto*/
 }
