--- a/Aula_21/style.css
+++ b/Aula_21/style.css
@@ -24,13 +24,12 @@ h1{
 }
 
 form{
-    box-shadow: 0 5px 10px rgba(77, 29, 77, 0.877); /* sompra em volta do "caixa" */
+    box-shadow: 0 5px 10px rgba(77, 29, 77, 0.877); /* sombra em volta do "caixa" */
     max-width: 100%;
     width: 400px;
 }
 
 .entrada {
-    border: none;
     background-color: black;
     width: 100%;
     height: 100%;
@@ -43,9 +42,10 @@ form{
 }
 
 .entrada:focus{
-    border: none;
+    border: solid 3px white;
     outline: 0; /* sem linha ao clicar no input */
 }
+
 
 .tarefas {
     background-color: rgb(0, 0, 0);
@@ -64,6 +64,13 @@ form{
 .tarefas li.completada{
     color: rgba(255, 255, 255, 0.61);
     text-decoration: line-through;  
+}
+
+.tarefas li::first-letter{
+    text-transform: uppercase;
+}
+.tarefas li:hover{
+    color: rgb(206, 179, 255);
 }
 
 small {
