--- a/Aula_25/style.css
+++ b/Aula_25/style.css
@@ -32,6 +32,57 @@ main {
     width: 35%;
 }
 
+h1{
+    font-size: 3rem;
+    margin-bottom: 0.5rem;
+}
+
+img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 5rem
+}
+
+.search{
+    border: none;
+    background-color: rgba(0, 0, 0, 0.66);
+    border-radius: 1.5rem;
+    width: 70%;
+    height: 40%;
+}
+
+.search::placeholder{
+    padding-left: 1rem;
+}
+
+.conteudo-pesquisa{
+    height: 20%;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.info-conteiner{
+    width: 100%;
+    height: 80%;
+    
+    font-size: 2.1rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 0.6rem;
+}
+
+label{
+    font-weight: bold;
+}
+
 footer{
     position: absolute;
     background-color: rgba(128, 128, 128, 0.216);
