fiz o input do api paises

--- a/Aula_25/style.css
+++ b/Aula_25/style.css
@@ -47,6 +47,7 @@ img{
 .search{
     border: none;
     background-color: rgba(0, 0, 0, 0.66);
+    color: lightblue;
     border-radius: 1.5rem;
     width: 70%;
     height: 40%;
