--- a/Aula_26/style.css
+++ b/Aula_26/style.css
@@ -8,44 +8,63 @@
 }
 
 body{
-    background-color: rgb(16, 92, 16);
-    position: relative;
-
+    background-color: rgb(38, 89, 38);
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
-
     width: 100vw;
     height: 100vh;
 }
 
-main{
-    background-color: rgb(207, 27, 27);
-    border-radius: 1.5rem;
-    flex-wrap: wrap;
-
-    height: 20%;
-    width: 80%;
+form{
+    background-color: rgb(194, 1, 1);
+    color: white;
+    width: 60%;
+    height: 30%;
 }
 
 h1{
-    font-size: 2rem;
-    margin-top: 10px;
-    color: white;
+    font-size: 40px;
+    margin: 10px;
+    text-align: center;
+}
+
+.conteiner-info{
+    padding: 10px;
+    margin: 10px;
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 86%;
+    padding-bottom: 20px;
+}
+
+.info{
     justify-content: center;
     align-items: center;
+    padding: 10px;
 }
 
-.conteiner-informacoes{
-    padding: 12px;
-    display: flex;
-    flex-direction: row;
-    overflow: hidden;
+label{
+    margin-top: 10px;
+    font-size: 18px;
+    font-style: bold;
 }
 
-.conteiner-informacoes div{
-    display: grid;
-    
+input{
+    width: 100%;
+    height: 30px;
+    padding: 8px;
+    border: none;
+    outline: none;
+    background-color: rgb(0, 0, 0);
+}
+
+input::placeholder{
+    color: rgba(255, 255, 255, 0.408);
+}
+
+input:focus{
+    background-color: rgba(0, 0, 0, 0.71);
+    outline: none;
 }
